@@ -1,3 +1,4 @@
+msgFieldMustContainValue = The %1 field must contain a value 
 msgSuccessfullyResizedAllImages = All images were successfully resized. Future images will adhere to the maximum resolution as selected.
 msgImageConversionFailed = Image conversion has failed. Please review the log, correct the errors and continue with the upgrade on the next startup of Data Crow.
 msgConvertImages = With this version of Data Crow a maximum resolution can be set for images to minimize disk space and memory usage.\r\n\r\nBelow you can set the maximum resolution after which Data Crow will resize all of your images. They will be scaled in line with the maximum whilst protecting their aspect ratio.\r\n\r\nThis process is irreversible; you cannot scale them to a larger resolution only to a smaller one after this process has been completed. 
